# provael

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING-leaderboard.md  CONTRIBUTING.md  Dockerfile  PRIOR_ART.md  README.md  SAFETY.md  SECURITY.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  vla-redteam-GRANT-APPLICATION.md  vla-redteam-LAUNCH-POSTS.md  vla-redteam-LEADERBOARD-PLAN.md  vla-redteam-STRATEGY.md  vla-redteam-WRITEUP.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: attack_family.yml  config.yml  design_partner.yml  evidence-defect.yml  leaderboard-submission.yml  top10-feedback.yml  top10_proposal.yml
.github/workflows/: checkpoint-security-gate.yml  ci.yml  docs.yml  gpu-nightly.yml  leaderboard-submission.yml  release.yml  scorecard.yml
ATTESTATION/: index.html
COMPLIANCE/: index.html
MEASURE-2-7/: index.html
SIM_PREDICTS_REAL/: index.html
TOP10/: index.html
accelerators/: index.html
attacks/: index.html
comparison/: index.html
compliance/machinery-annex-i-part-a/: index.html
compliance/machinery-reg-2027/: index.html
crosswalk/: index.html
crosswalk/robojailbench/: index.html
docs/: ADOPTERS.md  ATTESTATION.md  CNAME  COMMUNITY.md  COMPLIANCE.md  DEFENSES.md  MEASURE-2-7.md  SIM_PREDICTS_REAL.md  TOP10.md  TOP10_RFC.md  accelerators.md  attacks.md  comparison.md  examples.md  faq.md  glossary.md  handbook.md  index.md  leaderboard.md  migration-v2.md  open-core-promise.md  python-api.md  quickstart.md  roadmap.md
docs/compliance/: machinery-annex-i-part-a.md  machinery-reg-2027.md
docs/crosswalk/: README.md  robojailbench.md
docs/findings/: 2026-cross-arch-transfer.md  2026-instruction-transfer.md
docs/maintainers/: GITHUB_SECURITY_SETTINGS.md  HOSTED_PRODUCTION_REQUIREMENTS.md
docs/standards/: atlas-case-study.md  listings.md  owasp-asi-embodied.md
docs/studies/: eai04-action-space-transfer.md  metaworld-transfer.md  pi0-openpi-transfer.md  sim-to-real-so101.md
examples/: README.md  index.html  workflow.yml
examples/01-first-scan-cpu/: README.md
examples/02-redteam-smolvla-libero/: README.md
examples/adapters/: README.md  cookbook.md  groot_lerobot.md  openvla_adapter.py  pi0_lerobot.md
examples/ci/: README.md  attest-provenance.yml  azure-pipelines-provael.yml  github-actions.yml  gitlab-provael.yml  regression-gate.md  regression-gate.yml
examples/cross_suite_validation/: README.md  compare.py
examples/evidence/eu-ai-act-art15/: README.md
examples/gpu-ci/: README.md  modal-gpu-tests.yml  modal_provael_gpu.py
examples/hf/: README.md  emit_eval_results.py
examples/hf-space/: README.md  app.py  requirements.txt
examples/integrations/: README.md  sarif-aggregators.md
examples/integrations/garak/: README.md  provael_garak.py
examples/integrations/promptfoo/: promptfooconfig.yaml  provael_provider.py
examples/integrations/pyrit/: provael_target.py
examples/mlops/: README.md  mlflow_log_asr.py  wandb_log_asr.py
examples/python-api/: custom_policy_adapter.py  custom_suite_adapter.py  plot_asr_by_family.py
examples/recipes/: README.md  ci-gate.yml  full-sweep.yml  instruction-only.yml  quick.yml  regression-gate.yml
examples/reproductions/: README.md
examples/runtime/: README.md  robot_firewall.py  ros2_guard_node.py
examples/scorecard/: README.md
examples/suites/: README.md
examples/supply-chain/: README.md  mlbom_emit.py  verify_model.py
faq/: index.html
findings/2026-cross-arch-transfer/: index.html
handbook/: index.html
leaderboard/: README.md  app.py  index.html  requirements.txt
leaderboard/results/: _demo.json  leaderboard.json
notebooks/: 01_provael_in_5_minutes.ipynb  02_red_team_smolvla_libero.ipynb  03_calibration_and_fpr.ipynb  04_reading_the_report.ipynb  05_bring_your_own_policy.ipynb
python-api/: index.html
quickstart/: index.html
results/cross_arch_transfer/: summary.json
results/cross_arch_transfer/stub/: report.json  report.md
results/crosswalk/: crosswalk.robojailbench.json
results/eai04_action_space_transfer/: summary.json
results/optimized_targeted_hijack_stub/: README.md  report.json  report.md
results/smolvla_libero_object/: README.md  attestation.insurer.json  evidence-manifest.json  execution-manifest.json  report.json
roadmap/: index.html
scripts/: calibrate_zones.py  clean_baseline.py  demo.tape  record_demo.sh  run_real.sh  validate_submission.py
search/: search_index.json
src/provael/: __init__.py  assurance.py  attest.py  avid.py  calibration.py  certify.py  cli.py  compliance.py  config.py  crosswalk.py  eai.py  endpoints.py  evidence.py  execution.py  leaderboard.py  ledger.py  manifest.py  mlbom.py  oscal.py  recipes.py  regression.py  report.py  reproductions.py  runner.py  sarif.py  scorecard.py  types.py  verdict.py
src/vla_redteam/: __init__.py  cli.py  config.py  leaderboard.py  report.py  runner.py  types.py
standards/atlas-case-study/: index.html
standards/listings/: index.html
standards/owasp-asi-embodied/: index.html
studies/cross_arch_transfer/: run.py
studies/eai04-action-space-transfer/: index.html
tests/: conftest.py  test_action_schema.py  test_action_space.py  test_action_transfer.py  test_adversarial_asr.py  test_assurance.py  test_attacks.py  test_attest.py  test_authorization.py  test_avid.py  test_backdoor_vla.py  test_calibration.py  test_calibration_run.py  test_certify.py  test_cli.py  test_compliance.py  test_confidentiality.py  test_cross_arch_study.py  test_crosswalk.py  test_determinism.py  test_eai.py  test_eai04_study.py  test_endpoints_calibration.py  test_eval_rigor.py  test_evidence_state.py  test_execution.py  test_hosted.py  test_keepout_zones.py  test_leaderboard.py  test_lerobot_adapter.py  test_libero_adapter.py  test_libero_realpath.py  test_manifest.py  test_misalignment.py  test_mlbom.py  test_openpi_adapter.py  test_openvla_adapter.py  test_optimized.py  test_optimized_patch.py  test_oscal.py  (+18 more)
(+69 files in other folders)
