[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vla-redteam"
description = "RoboPwn — a model-agnostic tool to red-team open Vision-Language-Action (VLA) robot policies in simulation and report an Attack Success Rate (ASR)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sattyam Jain" }]
maintainers = [{ name = "Sattyam Jain" }]
keywords = [
    "vla",
    "robotics",
    "red-team",
    "security",
    "adversarial",
    "ai-safety",
    "lerobot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rich",
    "pyyaml",
    "numpy",
    "pillow>=10",
]

[project.urls]
Homepage = "https://github.com/sattyamjjain/vla-redteam"
Source = "https://github.com/sattyamjjain/vla-redteam"
Issues = "https://github.com/sattyamjjain/vla-redteam/issues"

[project.scripts]
robopwn = "vla_redteam.cli:app"

# Optional extra. Kept OUT of the default install so the core stays CPU-only and
# CI never pulls a GPU/ML stack. SmolVLA needs lerobot's own [smolvla] extra
# (transformers) — verified by introspection: base lerobot raises
# "No module named 'transformers'" on importing SmolVLAPolicy. The LIBERO simulator
# additionally needs lerobot[libero] (Part 2). Pin is the latest as of 2026-06-03.
[project.optional-dependencies]
lerobot = ["lerobot[smolvla]==0.5.1"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[tool.hatch.version]
path = "src/vla_redteam/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_redteam"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Optional, untyped deps loaded behind a guarded import in lerobot_adapter.py.
# They are never installed in the CPU build / CI, so mypy must not fail on them.
module = ["lerobot.*", "torch", "libero.*"]
ignore_missing_imports = true
