[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provael"
description = "Provael — a model-agnostic tool to red-team open Vision-Language-Action (VLA) robot policies in simulation and report an Attack Success Rate (ASR)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sattyam Jain" }]
maintainers = [{ name = "Sattyam Jain" }]
keywords = [
    "vla",
    "robotics",
    "red-team",
    "security",
    "adversarial",
    "ai-safety",
    "lerobot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rich",
    "pyyaml",
    "numpy",
    "pillow>=10",
]

[project.urls]
Homepage = "https://github.com/provael/provael"
Source = "https://github.com/provael/provael"
Issues = "https://github.com/provael/provael/issues"

[project.scripts]
provael = "provael.cli:app"

# Optional extra. Kept OUT of the default install so the core stays CPU-only and
# CI never pulls a GPU/ML stack. SmolVLA needs lerobot's own [smolvla] extra
# (transformers) — verified by introspection: base lerobot raises
# "No module named 'transformers'" on importing SmolVLAPolicy. The LIBERO simulator
# additionally needs lerobot[libero] (Part 2). Pin is the latest as of 2026-06-03.
[project.optional-dependencies]
# smolvla -> the policy (transformers); libero -> the simulator (Part 2 above). Both ride this one
# GPU extra so a single `pip install 'provael[lerobot]'` gives the full real SmolVLA x LIBERO path.
lerobot = ["lerobot[smolvla,libero]==0.5.1"]
# OpenVLA / OpenVLA-OFT via Hugging Face transformers (the non-LeRobot, model-agnostic path).
# GPU-only; pulled in explicitly by the user, never by the default install or CPU CI.
openvla = ["transformers>=4.40", "torch", "timm", "accelerate", "pillow>=10"]
# openpi / pi0 (Physical-Intelligence/openpi) via its CPU-only websocket client — the model runs in
# a separate GPU policy server, so this extra pulls no torch/JAX. The cross-architecture-transfer
# backend. Never pulled by the default install or CPU CI.
openpi = ["openpi-client>=0.1.2"]
# Cryptographic signing/verification for `provael attest`. Kept OUT of the default install so the
# free core stays 6 light deps; `attest` prints a clear install hint when it is missing. The dev
# group also pulls it so CI exercises the real Ed25519 sign/verify path (pure CPU, deterministic).
attest = ["cryptography>=42"]
# The reference hosted attestation server (`provael serve`). Open-core: the server code is
# Apache-2.0 and self-hostable; the operated, project-key-signed instance is the paid tier. Kept OUT
# of the default install so the free CLI/attacks/ASR/SARIF core stays lean and CPU-only.
hosted = ["fastapi>=0.110", "uvicorn>=0.27"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    # Pulled into dev/CI so the real Ed25519 sign/verify path in `provael attest` is exercised
    # (CPU, deterministic). End users get it via the `attest` optional extra, not the base install.
    "cryptography>=42",
]
# Docs site tooling — NOT installed by the default `uv sync` / CPU CI. Build with
# `uv run --group docs mkdocs build --strict`.
docs = [
    "mkdocs-material",
    "mkdocs-jupyter",
    "mike",
]

# The `lerobot` and `openpi` extras are mutually exclusive: lerobot pins numpy>=2.0 while
# openpi-client pins numpy<2.0, so they cannot share one environment (an upstream reality, not a
# provael choice). Declaring the conflict lets uv resolve/lock them in separate forks instead of
# failing the universal lock; each still installs fine on its own. They target different backends
# and are run in separate invocations anyway (lerobot in-process vs openpi client->server).
[tool.uv]
conflicts = [
    [{ extra = "lerobot" }, { extra = "openpi" }],
]

[tool.hatch.version]
path = "src/provael/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/provael"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Optional, untyped deps loaded behind a guarded import in lerobot_adapter.py.
# They are never installed in the CPU build / CI, so mypy must not fail on them.
# cryptography is guarded (lazy) in attest.py and only present via the dev group / attest extra.
module = [
    "lerobot.*", "torch", "libero.*", "transformers.*", "cryptography.*",
    "fastapi.*", "uvicorn.*", "openpi_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The hosted server's routes are registered with FastAPI's decorators, which are untyped here
# (fastapi is an optional [hosted] dep, absent from the CPU build). Relax the untyped-decorator
# rule for this module only — the handlers themselves stay fully typed.
module = ["provael.hosted.server"]
disallow_untyped_decorators = false
